<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CaptionActivity"
    tools:showIn="@layout/activity_caption">

    <ImageView
        android:id="@+id/captionImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/caption_image" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/captionImage"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/caption_description"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:lines="2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_generate"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/upload_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="uploadImage"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/upload_button"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>