<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CommentActivity"
    tools:showIn="@layout/activity_comment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/fullImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/caption_image" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/captured_by"/>

            <TextView
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/caption_description"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


    <EditText
        android:id="@+id/comment_input"
        android:layout_width="300dp"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="15sp"
        android:inputType="text"
        android:background="@color/colorWhite"
        android:hint="@string/comment_input"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/send_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comment_input"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:text="@string/send"
        android:onClick="sendComment" />


</androidx.constraintlayout.widget.ConstraintLayout>