<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/comment_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/comment_avatar" />

    <TextView
        android:id="@+id/comment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/comment_avatar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_toEndOf="@id/comment_avatar"
        android:text="@string/comment_user" />

    <TextView
        android:id="@+id/comment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/comment_avatar"
        app:layout_constraintTop_toBottomOf="@id/comment_user"
        android:layout_toEndOf="@id/comment_avatar"
        android:text="@string/comment_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
